--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="content">
                 <div class="left-content">
-                    <h1>Gurkeerat is awesome</h1>
+                    <h1>This website is awesome</h1>
                     This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
                     <button class="sign-up-one">Sign Up</button>
                 </div>
@@ -73,16 +73,18 @@
 
         <!-- Section 4 -->
         <div class="ad">
-            <div class="ad-text">
-                <div class="ad-text-title">Call to action! It's time!</div>
-                <div class="ad-text-text">Sign up for our product by clicking that button right over there!</div>
+            <div class="ad-box">
+                <div class="ad-text">
+                    <div class="ad-text-title">Call to action! It's time!</div>
+                    <div class="ad-text-text">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button class="sign-up-two">Sign Up</button>
             </div>
-            <button class="sign-up-two">Sign Up</button>
-
         </div>
 
         <!-- Footer -->
         <div class="footer">
+            Copyright &copy; The Odin Project 2021
 
         </div>
     </div>
